feat(ai): Implement LocalAI hot enabling at runtime with health checks and lifecycle management